hphp/hack/test/typecheck/new_inference/eager_solve/array_append_bad.php.like_types.exp
File "array_append_bad.php", line 5, characters 10-15:
Invalid index type for this KeyedContainer (Typing[4324])
File "array_append_bad.php", line 4, characters 48-49:
This is a value of generic type Tk
File "array_append_bad.php", line 4, characters 59-60:
It is incompatible with a dynamic value or a value of generic type Tk because it is an unenforceable type
File "array_append_bad.php", line 32, characters 16-20:
Invalid argument (Typing[4110])
File "array_append_bad.php", line 11, characters 23-28:
Expected string
File "array_append_bad.php", line 16, characters 38-38:
But got dynamic because it is an unenforceable type
File "array_append_bad.php", line 35, characters 16-20:
Invalid argument (Typing[4110])
File "array_append_bad.php", line 11, characters 23-28:
Expected string
File "array_append_bad.php", line 16, characters 38-38:
But got dynamic because it is an unenforceable type
File "array_append_bad.php", line 37, characters 3-18:
Invalid assignment (Typing[4110])
File "array_append_bad.php", line 24, characters 10-12:
Expected num
File "array_append_bad.php", line 37, characters 15-18:
But got bool
File "array_append_bad.php", line 39, characters 3-15:
Invalid assignment (Typing[4110])
File "array_append_bad.php", line 26, characters 7-9:
Expected int
File "array_append_bad.php", line 39, characters 12-15:
But got bool
File "array_append_bad.php", line 41, characters 3-21:
Invalid assignment (Typing[4110])
File "array_append_bad.php", line 27, characters 11-13:
Expected num
File "array_append_bad.php", line 41, characters 18-20:
But got string
File "array_append_bad.php", line 42, characters 3-21:
Invalid assignment (Typing[4110])
File "array_append_bad.php", line 27, characters 7-9:
Expected int
File "array_append_bad.php", line 42, characters 15-17:
But got string
